frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bowwebsite-frontend-service
spec:
  selector:
    app: bowwebsite-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001  # Add this line to specify the NodePort
  type: NodePort
